# askIT

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  file_structure.md  gitlog.txt  prompt.md  pyproject.toml  run.ps1  run_cli.py  tech_stack.md
.github/workflows/: release.yml
src/askit/: cli.py
src/askit/agent/: runtime.py
src/askit/commands/: config_cmd.py  init_cmd.py
src/askit/core/: config_manager.py  history.py  project.py
src/askit/providers/: base_provider.py  claude.py
src/askit/security/: secrets_manager.py
tests/: test_cli.py
